sass/ctrlo-bootstrap.scss
/* ... */
[role="tooltip"]:focus    .tooltip.visually-hidden,
[role="tooltip"]:active   .tooltip.visually-hidden,
[role="tooltip"]:hover    .tooltip.visually-hidden,
[role="tooltip"]:focus  + .tooltip.visually-hidden,
[role="tooltip"]:active + .tooltip.visually-hidden,
[role="tooltip"]:hover  + .tooltip.visually-hidden {

    @include visually-unhide;
}


/* less / more */
/* Ensure that more-less divs to not wrap away from their heading in click-to-edit topics */
.more-less {
    display: inline;
}

.more-less.clipped {
    max-height: 60px;
    overflow: hidden;
}

.more-less.transparent {
    color: transparent;
}

.more-less .column-content {
    padding: .5em;
    margin-top: .5em;
    word-wrap: break-word;
    overflow-wrap: break-word;
    word-break: initial;
    max-width: 50vw;
}

@import 'data-table';
@import 'permissions';

.select-widget .form-control {
    padding-bottom: 0;
    padding-left: 6px;
    padding-right: 31px;
    margin-bottom: .1em;
    min-height: 35px;
    height: auto;

    &:after {
        content: "\e114";
        font-family: "Glyphicons Halflings";
        position: absolute;
        top: .5em;
        right: .5em;
    }
}

.select-widget.select-widget--open .form-control:after {
    content: "\e113";
}

.select-widget.select-widget--read-only .form-control:after {
    display: none;
}

.select-widget .form-control-search {
    border: 0;
    outline: 0;
    background-color: transparent;

    &::-ms-clear {
        display: none;
    }
}

.select-widget .form-control-search::-moz-placeholder {
    font-style: italic;
}
.select-widget .form-control-search:-ms-input-placeholder {
    font-style: italic;
}
.select-widget .form-control-search::-webkit-input-placeholder {
    font-style: italic;
}

.select-widget .label {
  font-size: 1em;
  font-weight: bold;
  margin: 0;
  padding: 0;
}

.select-widget-label {
    margin-bottom: .3em;
}

.select-widget-label.required {
    font-weight: bold;
}

.select-widget-dropdown {
    position: relative;
}

.select-widget button {
    border: 1px solid #336699;
    border-radius: 0;
    font-family: Helvetica, sans-serif;
    vertical-align: top;
    margin-bottom: .5em;
    text-align: left;
}

.select-widget.single .change {
    margin-top: -.15em;
    padding-top: 0;
}

.select-widget.single .available .answer [type="radio"] {
  &:focus + span {
    border: 1px solid #336699;
  }

  &:checked + span {
    color: #336699;
  }
}

.select-widget .form-group:hover,
.select-widget .form-group:hover button,
.select-widget .form-group button:hover,
.select-widget .form-group button:focus {
    background-color: #eeefff;
}

.select-widget ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.select-widget .current li {
    margin-bottom: 6px;
    display: inline-block;
}

.select-widget .current li[data-list-item] {
    background-color: #ccccff;
    border-radius: 3px;
    padding: 0 .5em;
    white-space: nowrap;
}

.select-widget .current li[data-list-item].current__blank {
    font-style: italic;
    background-color: initial;
    border-radius: 0;
    padding: 0;
}

.select-widget .current .none-selected {
    display: none;
    font-style: italic;
    padding: 0 .5em;
}

.select-widget .current.empty .none-selected {
    display: inline-block;
}

.select-widget .current {
  max-width: 100%;
  overflow: hidden;
  text-align: left;
  cursor: default;
}

.select-widget .available {
    position: absolute;
    left: 0;
    right: 0;
    z-index: 3;
    background-color: #ffffff;
    border: 1px solid #ccc;
    box-shadow: 4px 4px 2px rgba(0,0,0,.075);
    max-height: 19em;
    overflow-x: hidden;
    overflow-y: scroll;
}

.select-widget .available--top {
    top: -1px;
    transform: translateY(-100%);
}

// transform is not supported in IE8, so reset some styles.
.ie8 .select-widget .available--top {
    top: auto;
}

.select-widget .available .answer {
    border-top: 1px solid #ccc;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

.select-widget .available .answer--blank {
    label {
        font-weight: normal;
        font-style: italic;
    }
}

.select-widget .available .answer:hover {
    background-color: #ededed;
}

.select-widget .available .spinner {
    padding: 10px;
}

.select-widget .available .has-noresults {
    padding: .4em .7em;
    margin: 0;
    font-style: italic;
}

.select-widget.multi .available .answer li {
    padding-top: .2em;
    padding-bottom: .2em;
}

.select-widget .available .answer:last-child {
    border-bottom: 0;
    padding-bottom: 0;
    margin-bottom: 0;
}

.select-widget .available li.answer > span {
    width: 17%;
    display: inline-block;
    vertical-align: top;
    text-align: right;
}

.select-widget .available .answer .control {
    text-align: left;
    width: 100%;
}

.select-widget .available.with-details .answer .control {
    width: 81%;
}

.select-widget .control label {
    display: block;
    padding: .4em .7em;
    margin: 0;
}

.select-widget .available .answer [type="radio"] {
    margin-right: .3em;
    vertical-align: top;
}

.select-widget .available .answer [type="checkbox"] {
    margin-right: .3em;

    &:focus + span {
        border: 1px solid #336699;
    }
}

.select-widget .available .answer .details {
    display: none;
    padding: .5em .3em;
}

.select-widget .available.with-details .answer .details {
    display: inline-block;
}

.select-widget .available .answer .more-info {
    margin-bottom: 0;
}

.select-widget .current [hidden] {
    display: none;
}

.edit-controls {
    min-height: 4em;
    padding-top: .5em;
    border: 1px solid #c8c8c8;
    box-shadow: .5em .5em .5em .5em #000;
    margin-bottom: 0;
}
/* ... */

